Improve capture pipeline reliability (#22)
